# doc-parse-eval-sketch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docparse_eval/: __init__.py  cli.py  extractor.py  harness.py  scoring.py
fixtures/docs/: doc_01.txt  doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt  doc_06.txt
fixtures/golden/: doc_01.json  doc_02.json  doc_03.json  doc_04.json  doc_05.json  doc_06.json
tests/: test_extractor.py  test_harness.py  test_no_company_names.py  test_regression_gate.py  test_scoring.py
