[project]
name = "docparse-eval-sketch"
version = "0.1.0"
description = "A small, self-authored regression eval harness for document-field extraction (synthetic data)."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Armaan Gulati" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
llm = ["anthropic>=0.30"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
