[project]
name = "docparse-eval-sketch"
version = "0.1.0"
description = "A small, self-authored regression eval harness for document-field extraction (synthetic data)."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Armaan Gulati" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
llm = ["anthropic>=0.30"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# The importable package is docparse_eval only; fixtures/ and tests/ are data
# and tests, not shipped modules. Declaring it explicitly stops setuptools
# flat-layout auto-discovery from erroring on multiple top-level directories.
[tool.setuptools]
packages = ["docparse_eval"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
